# rag_pract

./: README.md  main.py  pyproject.toml
scripts/: 01_indexing.py  02_retriever.py
