[project]
name = "simple-rag"
version = "0.1.0"
description = "Простая RAG система"
requires-python = ">=3.10"

dependencies = [
    "sentence-transformers",
    "faiss-cpu",
    "langchain",
    "langchain-text-splitters",
    "pypdf",
    "python-docx",
    "markdown",
    "openai",
    "ollama",
    "rank-bm25",
    "numpy",
    "tqdm",
    "python-dotenv",
    "click",
]

[project.scripts]
index = "index_docs:main"
query = "query_docs:main"
ui = "web_ui:main"

[tool.uv]
dev-dependencies = [
    "black",
    "pytest",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"